# yolov8_pose-

./: 925.cpp  CMakeLists.txt  chatGPT.cc  deepseek.cc  inference.cc  inference.cc.txt  inference.h  inference.h.txt  kimi.cc  luzhi.cc  main.cc  main（复件）.txt  my_inference.cc  onnx2openvino.cpp  pose可视化.py  time.h  tongbu.cc  tongbu.h  ytolov8me_2.sln  读取视频模拟.cc
linuxSDK_V2.1.0.41/include/: CameraApi.h
model/best_int8_openvino_model/: best.xml  metadata.yaml
src/: cpu_api.cc
ytolov8me_2/: inference.cpp  main.cpp  pose_run_test.cpp  test.cpp  ytolov8me_2.vcxproj  ytolov8me_2.vcxproj.filters
ytolov8me_2/include/opencv/opencv2/: cvconfig.h  opencv_modules.hpp
